Fixed post going off screen on Post page

--- a/src/components/Main/Post/Post.css
+++ b/src/components/Main/Post/Post.css
@@ -1,4 +1,5 @@
 .single-post {
+    padding: 20px 50px 20px;
     display: flex;
     flex-direction: column;
 }
@@ -30,6 +31,9 @@
 .post {
     display: flex;
     flex-direction: column;
+    width: 90%;
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 .info-section {
